[gd_scene load_steps=41 format=3 uid="uid://b7slcwrxnpcnt"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_wi1vh"]
[ext_resource type="Texture2D" uid="uid://b1e2r7gf3qbdj" path="res://assests/Player/Shoom_Hide.png" id="2_py68m"]
[ext_resource type="Texture2D" uid="uid://bhpoqg34oygou" path="res://assests/Player/Shoom_Idle.png" id="3_603ki"]
[ext_resource type="Texture2D" uid="uid://rp5gq0s08o4d" path="res://assests/Player/Shoom_Peek.png" id="4_5j80g"]
[ext_resource type="Texture2D" uid="uid://dvmh2ewopl7s1" path="res://assests/Player/Shoom_Pop.png" id="5_656sv"]
[ext_resource type="Texture2D" uid="uid://c3jho0o2p2e54" path="res://assests/Player/Shoom_Walk.png" id="6_b44y8"]
[ext_resource type="PackedScene" uid="uid://dgqbfnq2iiavp" path="res://scenes/hurtbox.tscn" id="7_op46c"]
[ext_resource type="Script" path="res://scripts/Health.gd" id="8_kguyu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x2tus"]
atlas = ExtResource("2_py68m")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj6jp"]
atlas = ExtResource("2_py68m")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qydm0"]
atlas = ExtResource("2_py68m")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_acp60"]
atlas = ExtResource("2_py68m")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vflc1"]
atlas = ExtResource("2_py68m")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbwf1"]
atlas = ExtResource("2_py68m")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h1gk"]
atlas = ExtResource("2_py68m")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds0g0"]
atlas = ExtResource("2_py68m")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq5hu"]
atlas = ExtResource("3_603ki")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_be3dq"]
atlas = ExtResource("3_603ki")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lodd"]
atlas = ExtResource("3_603ki")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_01rte"]
atlas = ExtResource("3_603ki")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65wdv"]
atlas = ExtResource("3_603ki")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ha06"]
atlas = ExtResource("3_603ki")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2yvf"]
atlas = ExtResource("4_5j80g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qis3a"]
atlas = ExtResource("4_5j80g")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdu7e"]
atlas = ExtResource("4_5j80g")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqs0f"]
atlas = ExtResource("4_5j80g")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d3io"]
atlas = ExtResource("5_656sv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffd4k"]
atlas = ExtResource("5_656sv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybtb0"]
atlas = ExtResource("5_656sv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dotj"]
atlas = ExtResource("5_656sv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tybs"]
atlas = ExtResource("6_b44y8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pv3c"]
atlas = ExtResource("6_b44y8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7is3h"]
atlas = ExtResource("6_b44y8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_girue"]
atlas = ExtResource("6_b44y8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4v84"]
atlas = ExtResource("6_b44y8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhcmn"]
atlas = ExtResource("6_b44y8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dep54"]
atlas = ExtResource("6_b44y8")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kuy2"]
atlas = ExtResource("6_b44y8")
region = Rect2(448, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vtt1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2tus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj6jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qydm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acp60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vflc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbwf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h1gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds0g0")
}],
"loop": false,
"name": &"hide",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq5hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be3dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lodd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01rte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65wdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ha06")
}],
"loop": true,
"name": &"idle",
"speed": 16.0
}, {
"frames": [{
"duration": 12.0,
"texture": SubResource("AtlasTexture_a2yvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qis3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdu7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqs0f")
}],
"loop": true,
"name": &"peek",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d3io")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffd4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybtb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dotj")
}],
"loop": false,
"name": &"pop",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tybs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pv3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7is3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_girue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4v84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhcmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dep54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kuy2")
}],
"loop": false,
"name": &"walk",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5fcf"]
size = Vector2(18.8492, 25.4514)

[node name="Player" type="CharacterBody2D"]
z_as_relative = false
position = Vector2(548, 257.759)
collision_mask = 22
script = ExtResource("1_wi1vh")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vtt1i")
animation = &"idle"
autoplay = "idle"

[node name="StandingHitBox" type="CollisionPolygon2D" parent="."]
visible = false
modulate = Color(0.160784, 1, 0.152941, 1)
z_index = 1
position = Vector2(19.277, 1.30319)
scale = Vector2(0.588412, 0.566248)
polygon = PackedVector2Array(-14.0667, -19.9616, -14.0667, 25.9547, -22.5641, 38.3168, -32.7611, 34.7848, -44.6575, 38.3168, -51.4554, 25.9547, -51.4554, -19.9616, -32.7611, -23.4936)

[node name="CrouchHitBox" type="CollisionPolygon2D" parent="."]
visible = false
z_index = 1
position = Vector2(20.6349, 1.19048)
scale = Vector2(0.588412, 0.566248)
polygon = PackedVector2Array(-16.3744, 8.55456, -6.17747, 19.2115, -4.47799, 32.9133, -12.9754, 37.4806, -57.1622, 37.4806, -65.6596, 32.9133, -62.2606, 16.1667, -48.6647, 7.03214, -29.9703, 5.50972)
disabled = true

[node name="hurtbox" parent="." instance=ExtResource("7_op46c")]
visible = false
position = Vector2(0, -10.3448)
rotation = 3.14159
scale = Vector2(1.59158, -1.37517)
collision_layer = 1
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0.628357, 11.6973)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_i5fcf")
debug_color = Color(0.927271, 0.220012, 0.401478, 0.42)

[node name="CrouchRayCast" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 4)
target_position = Vector2(0, -20)

[node name="LeftRayCast" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 4)
target_position = Vector2(-24, 0)

[node name="RightRayCast" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 4)
target_position = Vector2(24, 0)

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ToleranceTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Health" type="Node" parent="."]
script = ExtResource("8_kguyu")
MAX_HEALTH = 30

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="ToleranceTimer" to="." method="_on_tolerance_timer_timeout"]
